Cart Fixes, Icon/Button Update, Backup&Sync This commit includes the cart updates. This mostly is the fix to the update cart button. But there are quite a few little edits to make it look nice and wrap up the majority of the concerns on this page. Also, this commit contains the HACKY edit to the magento core, which fixes the product page issue. This is more-or-less a temporary fix. We will come back to this. Everything is rather well documented in the README.
Former-commit-id: acfd4826b7bceb64d90ade939f7c5dfb89841976

--- a/skin/frontend/default/rofcustom/css/cart-checkout.css
+++ b/skin/frontend/default/rofcustom/css/cart-checkout.css
@@ -68,6 +68,17 @@ img, button, input {
 
     }
 
+    /*#cart-cartbox-table*/
+    .button.btn-update {
+        text-indent: -10000px;
+        width: 90px;
+        height: 30px;
+        background: #8a6399 url('../images/cart-cartbox-table-update-btn.png') center center no-repeat;
+        position: absolute;
+        bottom: -60px;
+        right: 10px;
+    }
+
     #cart-cartbox-table-header {
         background-color: #ebebeb;
     }
@@ -119,6 +130,26 @@ img, button, input {
 
     .cart-cartbox-table-product td:last-child {
         padding: 0 8px 0 12px;
+    }
+
+    .cart-cartbox-table-product-qty-edit {
+        margin-top: -14px;
+    }
+
+    .cart-cartbox-table-product-qty-edit div {
+        color: #AAA;
+        text-decoration: none;
+        text-transform: uppercase;
+        font-size: 10px;
+        line-height: 10px;
+    }
+
+    .cart-cartbox-table-product .btn-remove {
+        display: inline-block;
+        text-indent: -10000px;
+        width: 12px;
+        height: 16px;
+        background: transparent url('../images/cart-cartbox-table-remove-icon.png') center center no-repeat;
     }
 
     .cart-cartbox-table-product-detail {
